# sqlalchemy

./: Makefile  README.md  alembic.ini  pyproject.toml  test_data.sql
src/: config.py  database.py  main.py  models.py  schemas.py
src/migrations/: env.py
src/migrations/versions/: a68c3fdadb7a_.py
src/queries/: core.py  orm.py
